--- a/index.html
+++ b/index.html
@@ -419,13 +419,13 @@
         import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBo8rX2FMj-nu4AuY6Kn04RywjWvQlRI7A",
-            authDomain: "mhkmp-d6d0a.firebaseapp.com",
-            projectId: "mhkmp-d6d0a",
-            storageBucket: "mhkmp-d6d0a.firebasestorage.app",
-            messagingSenderId: "17729502517",
-            appId: "1:17729502517:web:5b3bb42670b9710c26e07c",
-            measurementId: "G-M785YSBP4V"
+            apiKey: "AIzaSyBnRk-Os6EvJcFIdpl-lICc9w-E4pQ74nE",
+            authDomain: "linkmanager-fdac5.firebaseapp.com",
+            projectId: "linkmanager-fdac5",
+            storageBucket: "linkmanager-fdac5.firebasestorage.app",
+            messagingSenderId: "532683691813",
+            appId: "1:532683691813:web:5cf639e32a715c626eeccc",
+            measurementId: "G-NVN4E8TDGE"
         };
 
         let app, auth, db, user;
