--- a/index.html
+++ b/index.html
@@ -204,20 +204,19 @@
                 <i class="fas fa-cloud-upload-alt"></i>
             </button>
             
-            <div id="dataMenu" class="hidden absolute top-12 left-0 bg-white dark:bg-[#1e293b] shadow-xl rounded-xl border border-gray-100 dark:border-gray-700 overflow-hidden w-56 z-50">
-                <button onclick="loadHardcodedBackup()" class="w-full text-right px-4 py-4 text-sm bg-indigo-50 dark:bg-indigo-900/10 hover:bg-indigo-100 dark:hover:bg-indigo-900/30 text-indigo-700 dark:text-indigo-300 flex items-center gap-3 border-b border-gray-100 dark:border-gray-700">
-                    <div class="w-8 h-8 rounded-full bg-indigo-200 dark:bg-indigo-800 flex items-center justify-center text-indigo-700 dark:text-indigo-200"><i class="fas fa-magic"></i></div>
+            <div id="dataMenu" class="hidden absolute top-12 left-0 bg-white dark:bg-[#1e293b] shadow-xl rounded-xl border border-gray-100 dark:border-gray-700 overflow-hidden w-48 z-50">
+                <button onclick="loadHardcodedBackup()" class="w-full text-right px-4 py-3 text-sm hover:bg-indigo-50 dark:hover:bg-indigo-900/20 text-indigo-600 dark:text-indigo-400 flex items-center gap-3 border-b border-gray-100 dark:border-gray-700">
+                    <div class="w-8 h-8 rounded-full bg-indigo-100 dark:bg-indigo-900/30 flex items-center justify-center text-indigo-600 dark:text-indigo-400"><i class="fas fa-magic"></i></div>
                     <div>
-                        <span class="font-bold block">שחזר נתונים (מובנה)</span>
-                        <span class="text-[10px] opacity-70">לחץ כאן אם הקובץ לא עובד</span>
+                        <span class="font-bold block">שחזר נתונים מהשיחה</span>
+                        <span class="text-[10px] opacity-60">טעינה אוטומטית</span>
                     </div>
                 </button>
-
                 <button onclick="downloadData()" class="w-full text-right px-4 py-3 text-sm hover:bg-gray-50 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-200 flex items-center gap-3 border-b border-gray-100 dark:border-gray-700">
                     <div class="w-8 h-8 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400"><i class="fas fa-file-alt"></i></div>
                     <div>
-                        <span class="font-bold block">הורד גיבוי</span>
-                        <span class="text-[10px] opacity-60">קובץ טקסט</span>
+                        <span class="font-bold block">הורד (טקסט)</span>
+                        <span class="text-[10px] opacity-60">קריא לעריכה</span>
                     </div>
                 </button>
                 <button onclick="triggerUpload()" class="w-full text-right px-4 py-3 text-sm hover:bg-gray-50 dark:hover:bg-gray-700 text-gray-700 dark:text-gray-200 flex items-center gap-3">
@@ -449,7 +448,6 @@
         } catch (e) { console.error("Firebase Init Error:", e); }
 
         // --- גיבוי מוטמע לשימוש חירום (מונע תקלות קבצים) ---
-        // שים לב: זה מוטמע ישירות בקוד כדי לעקוף בעיות קריאת קבצים
         const emergencyBackup = [
           {
             "store": "Carrefour קרפור", "title": "הטבה אישית", "value": 0, "exp": "2028-10-25", "code": "799044022633", "category": "food", "isPinned": false,
